Fix audit field names and update unit tests